User Profile page image and name aligned correctly

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,7 +12,7 @@ $form-background-color: #fff;
 
 $nav-font-family: 'Josefin Sans', sans-serif;
 $home-font-family: 'Zeyada', cursive;
-$font: bolder 0.875rem 'Avenir Next';
+$username-font: 0.1rem,'Avenir Next';
 
 
 $font-color: #0C140F;
